# kis_build_system

./: .gitignore  CMakeLists.txt  DUAL_PHASE_LINKING.md  README.md  kis.package.cmake  kis.package.json  kis.package.schema.json  kis_build_system.cmake
cmake/build_system/: components.cmake  dependency_resolution.cmake  env_setup.cmake  installation.cmake  packaging.cmake  paths.cmake  presets_logic.cmake  sdk_options.cmake  sdk_presets.cmake
cmake/templates/: GenericPackageConfig.cmake.in
modules/: README.md  build_profiling.cmake  build_summary.cmake  cache.cmake  cache_validation.cmake  compiler_cache.cmake  components.cmake  dependencies.cmake  dependency_graph.cmake  dependency_linking.cmake  dependency_resolution.cmake  diagnostics.cmake  discovery.cmake  entrypoints.cmake  file_utils.cmake  first_party_deps.cmake  imported_targets.cmake  incremental_dependencies.cmake  incremental_validation.cmake  installation.cmake  kis_build_system-config.cmake.in  kis_build_system.cmake  kis_state.cmake  manifest_validation.cmake  package_configuration.cmake  package_discovery.cmake  packaging.cmake  parallel_fetch.cmake  paths.cmake  platform_setup.cmake  platforms.cmake  policies.cmake  presets_logic.cmake  sdk_options.cmake  sdk_presets.cmake  sdk_variants.cmake  sdk_versions.cmake  standalone.cmake  targets.cmake  third_party_deps.cmake  (+2 more)
templates/: GenericPackageConfig.cmake.in  GenericThirdPartyConfig.cmake.in
tests/: CMakeLists.txt  test_utilities.cmake
tests/fixtures/config_test_packages/basic_lib/: CMakeLists.txt  kis.package.json
tests/test_configuration/: test_package_configuration.cmake
tests/test_discovery/: _test_platform_overrides.cmake
tests/test_state/: test_state_api.cmake
tests/test_utils/: test_cache.cmake  test_json_parsing.cmake  test_policies.cmake
tests/test_variants/: test_abi_groups.cmake
tests/test_warning_summary/: test_collect_warning.cmake
